--- a/index.css
+++ b/index.css
@@ -1,4 +1,9 @@
-
+img {
+    border-radius: 30%;
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
+  }
   h1 {
     font-family: "Playwrite USA Traditional" ;
     text-align : center;
